[package]
name = "gen_math_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
function_macros = { path="../function_macros" }
kutta_macros = { path="../kutta_macros" }
nalgebra = "0.32.3"
num = "0.4.1"
num-traits = "0.2.17"
rand = "0.8.4"
lazy_static = "1.4.0"

[dev-dependencies]
approx = "0.5.1"
